[gd_scene load_steps=5 format=3 uid="uid://ddgohugs478ym"]

[ext_resource type="Script" path="res://sources/language_tool/image_and_sound_gp_description.gd" id="1_rm4b8"]
[ext_resource type="PackedScene" uid="uid://dbl3r8426473v" path="res://sources/language_tool/plus_button.tscn" id="1_uutsu"]
[ext_resource type="Texture2D" uid="uid://5fffpm7hc12k" path="res://assets/menus/upload.png" id="2_0hqnp"]
[ext_resource type="Texture2D" uid="uid://b8tctfnsj3prx" path="res://assets/menus/minus_button.png" id="4_10coa"]

[node name="ImageAndSoundGPDescription" type="HBoxContainer"]
script = ExtResource("1_rm4b8")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(776, 0)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="GPMenuButton" type="MenuButton" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "GP"
alignment = 0

[node name="ImageContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(776, 0)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ImageContainer"]
layout_mode = 2

[node name="ImageCheckBox" type="CheckBox" parent="ImageContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_mask = 0

[node name="ImageUploadButton" parent="ImageContainer/HBoxContainer" instance=ExtResource("1_uutsu")]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect" parent="ImageContainer/HBoxContainer/ImageUploadButton" index="0"]
texture = ExtResource("2_0hqnp")

[node name="MarginContainer3" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(776, 0)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer3"]
layout_mode = 2

[node name="SoundCheckBox" type="CheckBox" parent="MarginContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_mask = 0

[node name="SoundUploadButton" parent="MarginContainer3/HBoxContainer" instance=ExtResource("1_uutsu")]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect" parent="MarginContainer3/HBoxContainer/SoundUploadButton" index="0"]
texture = ExtResource("2_0hqnp")

[node name="Button" parent="." instance=ExtResource("1_uutsu")]
layout_mode = 2

[node name="TextureRect" parent="Button" index="0"]
texture = ExtResource("4_10coa")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(1500, 1000)
always_on_top = true
popup_window = true
ok_button_text = "Ouvrir"
file_mode = 0
access = 2

[connection signal="pressed" from="ImageContainer/HBoxContainer/ImageUploadButton" to="." method="_on_image_upload_button_pressed"]
[connection signal="pressed" from="MarginContainer3/HBoxContainer/SoundUploadButton" to="." method="_on_sound_upload_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]

[editable path="ImageContainer/HBoxContainer/ImageUploadButton"]
[editable path="MarginContainer3/HBoxContainer/SoundUploadButton"]
[editable path="Button"]
